Make sure timing info bar does not wrap

--- a/src/gams_bootstrap.scss
+++ b/src/gams_bootstrap.scss
@@ -228,6 +228,7 @@ body {
 .job-timings-info-bar {
   width: 100%;
   height: 25px;
+  white-space: nowrap;
   overflow: hidden;
 }
 
